Nambah buat awesome notif

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -33,5 +33,10 @@
   "english": "English",
   "indonesian": "Indonesian",
   "imagefail": "Image upload failed: ",
-  "noimage": "No image chosen."
+  "noimage": "No image chosen.",
+  "reminder": "Reminder",
+  "thisisyour": "This is your",
+  "notifafter": "notification after",
+  "seconds": "seconds",
+  "notifyme": "Notify me"
 }
