--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -37,6 +37,6 @@
   "reminder": "Reminder",
   "thisisyour": "This is your",
   "notifafter": "notification after",
-  "seconds": "seconds",
+  "seconds": "seconds; buy some property!",
   "notifyme": "Notify me"
 }
