--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -36,7 +36,7 @@
   "noimage": "Tidak ada gambar yang dipilih!",
   "reminder": "Pengingat",
   "thisisyour": "Ini adalah notifikasi ke",
-  "notifafter": "Setelah",
-  "seconds": "Detik",
+  "notifafter": "setelah; ayo beli properti!",
+  "seconds": "detik",
   "notifyme": "Ingatkan aku"
 }
