--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,8 +1,8 @@
 {
   "title": "Cyberprop | Property Marketplace",
   "dataerror": "Something's wrong, please inform Cyberprop admin.",
-  "itemlist": "Item List",
-  "blank": "No items available",
+  "itemlist": "Property List",
+  "blank": "No item available",
   "contact": "Contact",
   "property": "Property",
   "settings": "Settings",
@@ -26,7 +26,7 @@
   "price": "Price",
   "dataupdated": "Data updated",
   "submit": "Submit",
-  "editproduct": "Edit Product",
+  "editproperty": "Edit Property",
   "update": "Update",
   "language": "Language",
   "selectlanguage": "Select Language",
@@ -39,6 +39,7 @@
   "thisisyour": "This is your",
   "notifafter": "notification after",
   "seconds": "seconds; buy some property!",
+  "notification": "Notification",
   "notifyme": "Notify me",
   "pressok": "Press 'OK' to delete item.",
   "deleted": "Item deleted.",
