--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -1,7 +1,7 @@
 {
   "title": "Cyberprop | Marketplace Properti",
   "dataerror": "Ada yang salah, mohon hubungi admin Cyberprop.",
-  "itemlist": "Daftar Produk",
+  "itemlist": "Daftar Properti",
   "blank": "Tidak ada produk yang tersedia",
   "contact": "Kontak",
   "property": "Properti",
@@ -26,7 +26,7 @@
   "price": "Harga",
   "dataupdated": "Data diupdate",
   "submit": "Kirim",
-  "editproduct": "Edit Produk",
+  "editproperty": "Edit Properti",
   "update": "Perbarui",
   "language": "Bahasa",
   "selectlanguage": "Pilih Bahasa",
@@ -39,6 +39,7 @@
   "thisisyour": "Ini adalah notifikasi ke",
   "notifafter": "setelah; ayo beli properti!",
   "seconds": "detik",
+  "notification": "Notifikasi",
   "notifyme": "Ingatkan aku",
   "pressok": "Tekan 'OK' untuk menghapus item.",
   "deleted": "Item dihapus.",
